Fix bug: Bundles 404 error on release. Fix bug: Footer layout whitespace if yandex share fails.

--- a/Hozpm/css/site.css
+++ b/Hozpm/css/site.css
@@ -283,10 +283,16 @@ footer {
   height: 176px;
   margin-top: -176px;
 }
+footer .content-wrap > div.container {
+  height: 132px;
+}
 @media (min-width: 992px) {
   footer {
     height: 192px;
     margin-top: -192px;
+  }
+  footer .content-wrap > div.container {
+    height: 148px;
   }
 }
 .group-card {
